[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-analysis-agent"
version = "0.1.0"
description = "Code Analysis Agent Backend Service"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "langchain>=0.0.200",
    "langchain-openai>=0.0.2",
    "pydantic>=1.8.2",
    "PyGithub>=1.55",
    "python-jose[cryptography]>=3.3.0",
    "SQLAlchemy>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "alembic>=1.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
